support for OCI automatic backup v4

--- a/templates/setup.json_template.j2
+++ b/templates/setup.json_template.j2
@@ -46,7 +46,7 @@
 "restore_level1": "True",
 "open_resetlogs": "True",
 "datapatch_on_target": "True",
-"register_in_OCI": "False",
+"register_in_OCI": "True",
 
 "convert_to_RAC": "{{ hostvars[groups['target'][0]].convert_to_RAC }}",
 "convert_to_ExaCS": "{{ hostvars[groups['target'][0]].convert_to_ExaCS }}"
